# brief_pipeline_data_engineering

./: .releaserc.json  CHANGELOG.md  README.md  cococ.tct  package.json  pyproject.toml
.github/workflows/: release.yml
src/: test_data.py
